# gecko-mcpay-api

./: (set)  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml  response.html
.claude/agents/: ai-ml-engineer.md  defi-engineer.md  devops-engineer.md  quant-analyst.md  solana-architect.md  solana-researcher.md  trading-strategist.md
.github/workflows/: catalog-drift.yml  e2e-smoke.yml  eval.yml  release.yml
audit_runs/: 2026-05-13-audit-after-A.json  2026-05-13-audit-after-B.json  2026-05-13-audit-after-C.json  2026-05-13-audit-after-D.json  2026-05-13-audit-after-E.json  2026-05-13-audit-after-F.json  2026-05-13-audit-after-G.json  2026-05-13-audit-before.json  2026-05-13-plan-classA.json  2026-05-13-plan-classB.json  2026-05-13-plan-classC.json  2026-05-13-plan-classD.json  2026-05-13-plan-classE.json  2026-05-13-plan-classF.json  2026-05-13-plan-classG.json  2026-05-13-purge-log.json  2026-05-13-purge-plan-classg-ext.json  2026-05-13-purge-plan.json
docs/: PRD.md  build-plan-sprint-10.md  build-plan-sprint-12.md  build-plan-sprint-14.md  build-plan-sprint-15.md  build-plan-sprint-23-gecko_report.md  build-plan-sprint-25.md  build-plan-sprint-mcp-plug-and-play.md  build-plan-v2-and-beyond.md  external-sources-survey.md  max-tier-pricing-decision.md  product-story.md  roadmap-post-grant.md  sprint-1-completion.md  test-plan.md  v1-build-plan-external-sources.md
docs/audits/: 2026-05-01-readme-docs-audit.md
docs/coordination/: frames-ag-data-broker-asks.md
docs/decisions/: 0001-mainnet-after-v1-sources.md
docs/demo/: 2026-05-06-manus-first-touch-sequence.md  quickstart.md  trade-oracle-stub-quickstart.md
docs/diagnostics/: 2026-04-30-rubric-native-verdict-proposal.md  2026-04-30-verdict-regression-analysis.md  2026-05-01-twitsh-probe.md
docs/eval/: 2026-05-13-s24-eval-honest-state.md  2026-05-17-s34-shipgate-N15-vs-N30.md  2026-05-17-s34-topk-cost-model.md  2026-05-17-s35-citation-relevance-diagnosis.md  2026-05-17-s35-shipgate-remeasure.md  2026-05-18-s36-110-shipgate-n50.md  2026-05-18-s36-112-hallucination-rootcause.md  2026-05-18-s36-113-retrieval-trace.md  2026-05-18-s36-114-panel-reasoning-trace.md  2026-05-18-s36-hallucination-diagnosis.md  2026-05-18-s36-reingest-verification.md  2026-05-18-s37-122-shipgate-N50.md  2026-05-18-s37-A-verdict-accuracy-diagnosis.md  2026-05-18-s37-B-confidence-calibration-analysis.md  2026-05-18-s37-C-d1-rubric-contract.md  2026-05-18-s37-synthesis-rootcause-and-fix-design.md  2026-05-19-s37-124-shipgate-N50.md  live-v1-results-2026-04-30.md
docs/handoffs/: 2026-05-18-verdict-envelope-split-cross-repo.md
docs/marketing/: landing-copy-v2.md
docs/positioning/: landing-vs-research-delta.md
docs/prompts/: v5_1-changelog.md  v5_4-changelog.md
docs/runbooks/: 2026-05-20-x402-live-flip.md  eval-gate.md  ingestion-blocklist.md  live-cdp-bazaar-smoke.md  live-mainnet-smoke.md  mainnet-cutover.md
docs/sprint-reviews/: 2026-05-02-s18-s19-review.md
docs/strategy/: 2026-05-01-commoditized-knowledge-thesis.md  2026-05-02-s18-plan.md  2026-05-02-s20-plan-seed.md  2026-05-02-verdict-url-api-contract.md  2026-05-02-verdict-url-frontend-handoff.md  2026-05-06-s20-knowledge-as-commodity.md  2026-05-07-s22-mcp-host-deploy.md  2026-05-08-partner-integration-shape.md  2026-05-08-s23-plan.md  2026-05-08-trading-oracle-deploy-checklist.md  2026-05-11-cofounder-roadmap-brief.md  2026-05-11-colosseum-demo-video-guide.md  2026-05-11-colosseum-pitch-guide.md  2026-05-11-panel-and-flow.md  2026-05-11-retrieval-wedge-sprint.md  2026-05-11-trade-agent-pricing-model.md  2026-05-11-trade-vertical-expansion.md  2026-05-12-multi-sprint-roadmap.md  2026-05-12-s24-plan.md  2026-05-12-s24-wave-1-handoff.md  2026-05-13-s24-closeout-synthesis.md  2026-05-13-s25-live-flip-readiness.md  2026-05-13-s25-retrieval-handoff.md  2026-05-13-s26-autonomous-tradeagent-cost-model.md  2026-05-13-s26-corpus-reingest-handoff.md  2026-05-13-s26-eval-redesign-plan.md  2026-05-13-s26-lost-in-middle-handoff.md  2026-05-13-s27-cache-hit-experiment.md  2026-05-13-s27-corpus-mix-handoff.md  2026-05-13-s27-path-d-22-handoff.md  2026-05-13-s29-39-phase-2-cleanup-handoff.md  2026-05-14-s28-cache-key-fix-handoff.md  2026-05-14-s28-cohere-rerank-handoff.md  2026-05-14-s28-corpus-depth-handoff.md  2026-05-14-s29-31-handoff.md  2026-05-14-s29-32-canon-handoff.md  2026-05-14-s29-33-handoff.md  2026-05-14-s29-34-ablation-handoff.md  2026-05-14-s30-42-pattern-a-sweep-handoff.md  2026-05-14-s31-48-pattern-a-finishing.md  (+21 more)
docs/tickets/: kimi-k2.6-full-audit.md  openrouter-agent-deep-analysis.md
infra/: deploy.sh  ecs-stack.yml  push-ssm-params.sh
instructions/: skill.md
plans/: last_fixes_summary.md  openrouter-bugfix-plan.md
plans/generated_reports/: gecko_report_6afd55d7.html
scripts/: README.md  check_catalog_drift.py  debug_basic_synthesis.py  e2e_smoke.py  evict_academic_gecko_chunks.py  falsifier_tavily.py  install.sh  positioning_check.sh  probe_twitsh.py  probe_twitsh_raw.py  reconcile_economics.py  record_verdict_cassette.py  run_eval_gate.sh  run_eval_gate_live.sh
scripts/bazaar/: ingest_manifest.py  validate_solana_only.py
scripts/canon/: ingest_berkshire.py  ingest_marks.py
scripts/data/: audit_existing_chunks.py  purge_garbage_chunks.py
scripts/market_data/: ingest_historical_prices.py  ingest_market_data.py
scripts/mongo/: bootstrap_trade_agent.py  s20_legacy_revoke.py  s20_rag02_filterable_index.py
scripts/neobank/: seed_corpus.py  web_seeds.yaml
scripts/paysh/: simulate_call.py
scripts/protocol_native/: dedup_dex_chunks.py  ingest_protocol_native.py
scripts/trading_oracle/: run.py  service_call_specs.py  solana_buyer.py  validate_corpus.py
scripts/x402/: simulate_live_flip.py
tests/: test_canonical_literal_drift.py  test_fixture_vertical_drift.py  test_kill_verdict.py  test_logging_redact.py  test_provider_mix_audit.py  test_verdict_consistency.py  test_verdict_hash.py  test_verdict_parse_drift.py  test_verdict_persistence.py
tests/api/: test_middleware.py  test_pricing.py  (+3 more)
(+240 files in other folders)
