[project]
name = "gecko-workspace"
version = "0.1.0"
description = "Builder Bootstrap Platform — turn an idea into a knowledge base, business plan, validation report, and PRD."
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "packages/gecko-core",
    "packages/gecko-mcp",
    "packages/gecko-api",
    "apps/cli",
    "apps/demo-agent",
]

[tool.uv.sources]
gecko-core = { workspace = true }
gecko-mcp  = { workspace = true }
gecko-api  = { workspace = true }
gecko-demo-agent = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["packages", "apps"]

[tool.pytest.ini_options]
testpaths = ["tests", "packages", "apps"]
python_files = "test_*.py"
addopts = "-q --strict-markers --import-mode=importlib"
asyncio_mode = "auto"
markers = [
    # S12.5-TEST-04: gated integration tests that hit the real CDP
    # facilitator's /verify endpoint (read-only, free). Skipped unless the
    # operator opts in via env, so CI doesn't burn credentials. We never
    # run /settle from a marker-gated test — that's reserved for the live
    # smoke runbook.
    "live_cdp: integration test against the real CDP facilitator (free /verify only)",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "types-cachetools>=5.0",
    # tests/conftest.py imports load_dotenv before any package is loaded;
    # without it CI fails with ModuleNotFoundError before tests can run.
    "python-dotenv>=1.0",
    # Eval harness: live-mode rubric judge (Claude Sonnet 4.6).
    # Mock mode does NOT import this; production never touches it.
    "anthropic>=0.39",
    # Eval harness: ideas.yaml loader.
    "PyYAML>=6.0",
    "types-PyYAML>=6.0",
    # S12-HARDEN-05: in-process Mongo for transcript-store tests. CI runs
    # without a real Mongo; mongomock provides a drop-in pymongo fake.
    "mongomock>=4.1",
]
