[project]
name = "gecko-workspace"
version = "0.1.0"
description = "Builder Bootstrap Platform — turn an idea into a knowledge base, business plan, validation report, and PRD."
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "packages/gecko-core",
    "packages/gecko-mcp",
    "packages/gecko-api",
    "apps/cli",
    "apps/demo-agent",
]

[tool.uv.sources]
gecko-core = { workspace = true }
gecko-mcp  = { workspace = true }
gecko-api  = { workspace = true }
gecko-demo-agent = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "UP042", "RUF002", "RUF003", "B017"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["packages", "apps"]

[tool.pytest.ini_options]
testpaths = ["tests", "packages", "apps"]
python_files = "test_*.py"
addopts = "-q --strict-markers --import-mode=importlib"
asyncio_mode = "auto"
markers = [
    # S12.5-TEST-04: gated integration tests that hit the real CDP
    # facilitator's /verify endpoint (read-only, free). Skipped unless the
    # operator opts in via env, so CI doesn't burn credentials. We never
    # run /settle from a marker-gated test — that's reserved for the live
    # smoke runbook.
    "live_cdp: integration test against the real CDP facilitator (free /verify only)",
    # S16-BAZAAR-CONSUMER-04: gated cassette test against a real $0.01-class
    # x402 endpoint (TripAdvisor on Base) for the buyer-side flow. Replay
    # mode runs in CI; live re-record requires GECKO_BAZAAR_LIVE=1 and a
    # funded buyer wallet. See tests/payments/test_bazaar_consumer_contract.py.
    "live_bazaar: gated buyer-side x402 contract test (cassette replay by default)",
    # S20-X402-VERDICT-SETTLE-01 (#11): gated cassette test for the
    # verdict-paywall x402 flow against the real facilitator's
    # /verify AND /settle endpoints (Pattern C — Sprint 12 CDP failed
    # because only /verify was exercised). Replay mode runs in CI;
    # live re-record requires GECKO_VERDICT_X402_LIVE=1 + a funded
    # buyer wallet. See tests/payments/test_verdict_settle_contract.py.
    "live_x402_verdict: gated verdict-paywall x402 contract test (cassette replay by default)",
    # S22-N2: gated drift-detector against the live pay.sh manifest at
    # https://pay.sh/.well-known/agent-skills/index.json. Default test
    # run skips this; invoke explicitly with `-m live` (or run from a
    # weekly job) to catch contract drift in the manifest schema.
    "live: integration test that hits a live external endpoint (skipped by default)",
    # S22-N4: gated live-spend test that issues real x402-paid calls to
    # pay.sh providers and burns USDC from the configured wallet. Default
    # `pytest` run skips these; operator opts in with `pytest -m live_paysh`
    # after verifying budget envelope + wallet balance. See
    # packages/gecko-core/tests/sources/test_paysh_live.py and the
    # `paysh_live_<fqn>_2026_05_07.json` recorded fixtures.
    "live_paysh: gated live-spend test against real pay.sh x402 providers (manual operator opt-in)",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "types-cachetools>=5.0",
    # tests/conftest.py imports load_dotenv before any package is loaded;
    # without it CI fails with ModuleNotFoundError before tests can run.
    "python-dotenv>=1.0",
    # Eval harness: live-mode rubric judge (Claude Sonnet 4.6).
    # Mock mode does NOT import this; production never touches it.
    "anthropic>=0.39",
    # Eval harness: ideas.yaml loader.
    "PyYAML>=6.0",
    "types-PyYAML>=6.0",
    # S12-HARDEN-05: in-process Mongo for transcript-store tests. CI runs
    # without a real Mongo; mongomock provides a drop-in pymongo fake.
    "mongomock>=4.1",
]
